wacc/test/golden/syntaxErr.sequence.missingSeq
# missing sequential composition

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin 
  skip
  skip 
end


(line 13, column 3):
  unexpected "ski"
  expected ";", end, or end of skip
  >  skip
  >  skip 
     ^^^
  >end